src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dwP0.25-dhF500-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1240 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
