src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dwP0.25-dhF500-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1248 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
